---
source: crates/thread_aware_macros_impl/tests/derive.rs
expression: expand(input)
---
impl<T, U> ::thread_aware::ThreadAware for EnumNamedPhantom<T, U>
where
    core::marker::PhantomData<T>: ::thread_aware::ThreadAware,
    core::marker::PhantomData<U>: ::thread_aware::ThreadAware,
{
    fn relocate(
        &mut self,
        __thread_aware_source: ::core::option::Option<&::thread_aware::Thread>,
        __thread_aware_destination: &::thread_aware::Thread,
    ) {
        match *self {
            Self::Variant {
                data: ref mut __thread_aware_field_0,
                marker: ref mut __thread_aware_field_1,
            } => {
                ::thread_aware::ThreadAware::relocate(
                    __thread_aware_field_0,
                    __thread_aware_source,
                    __thread_aware_destination,
                );
                ::thread_aware::ThreadAware::relocate(
                    __thread_aware_field_1,
                    __thread_aware_source,
                    __thread_aware_destination,
                );
            }
            Self::Other {
                value: ref mut __thread_aware_field_0,
                phantom: ref mut __thread_aware_field_1,
            } => {
                ::thread_aware::ThreadAware::relocate(
                    __thread_aware_field_0,
                    __thread_aware_source,
                    __thread_aware_destination,
                );
                ::thread_aware::ThreadAware::relocate(
                    __thread_aware_field_1,
                    __thread_aware_source,
                    __thread_aware_destination,
                );
            }
        }
    }
}
